--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/DYPATU-Logo.svg"></a>
+            <a href="index.html"><img src="DYPATU-Logo.svg"></a>
             <div class="nav-links" id="nav-links">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
 
@@ -103,17 +103,17 @@
         <p>We are ready to win,better you be ready 👍 </p>
         <div class="row">
             <div class="campus-col my-hover">
-                <img src="images/london.png">
+                <img src="london.png">
                 <h3>ATU Building</h3>
             </div>
 
             <div class="campus-col my-hover">
-                <img src="images/newyork.png">
+                <img src="newyork.png">
                 <h3>Hostel</h3>
             </div>
 
             <div class="campus-col my-hover">
-                <img src="images/washington.png">
+                <img src="washington.png">
                 <h3>ATU office</h3>
 
             </div>
@@ -136,7 +136,7 @@
 
         <div class="row">
             <div class="facilities-col my-hover">
-                <img src="images/library.png ">
+                <img src="library.png ">
                 <h3>World Class Library</h3>
                 <p class="text-justify">Library is a heart of any educational institute.
                     The central library is established with stack room and issue
@@ -156,7 +156,7 @@
                 </p>
             </div>
             <div class="facilities-col my-hover">
-                <img src="images/basketball.png ">
+                <img src="basketball.png ">
                 <h3>Best Play Ground</h3>
                 <p class="text-justify">Our College has an excellent play ground for students with indoor and out door
                     sports facilities.
@@ -164,7 +164,7 @@
                     Various sports are conducted by coachers.</p>
             </div>
             <div class="facilities-col my-hover">
-                <img src="images/cafeteria.png ">
+                <img src="cafeteria.png ">
                 <h3> Testy And healthy Food</h3>
                 <p class="text-justify">Becoming accredited provides reassurance to the wider school community
                     that the food service aims to provide a high quality and safe food
