--- a/course.html
+++ b/course.html
@@ -20,7 +20,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/DYPATU-Logo.svg"></a>
+            <a href="index.html"><img src="DYPATU-Logo.svg"></a>
             <div class="nav-links" id="nav-links">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
 
@@ -94,7 +94,7 @@
 
         <div class="row">
             <div class="facilities-col">
-                <img src="images/library.png ">
+                <img src="library.png ">
                 <h3>World Class Library</h3>
                 <p>The fully air-conditioned library has a rich collection of over 10,068 volume of books,
                     70 journals & 24periodicals- national as well as international,
@@ -103,14 +103,14 @@
                     On line databases as Proquest-ABI/INFORM Complete& IBID is also available in the Library.</p>
             </div>
             <div class="facilities-col">
-                <img src="images/basketball.png ">
+                <img src="basketball.png ">
                 <h3>Best Play Ground</h3>
                 <p>Our College has an excellent play ground for students with indoor and out door sports facilities.
                     Our college is having very big playground for various outdoor games.
                     Various sports are conducted by coachers.</p>
             </div>
             <div class="facilities-col">
-                <img src="images/cafeteria.png ">
+                <img src="cafeteria.png ">
                 <h3> Testy And healthy Food</h3>
                 <p>Becoming accredited provides reassurance to the wider school community
                     that the food service aims to provide a high quality and safe food
