--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/DYPATU-Logo.svg"></a>
+            <a href="index.html"><img src="DYPATU-Logo.svg"></a>
             <div class="nav-links" id="nav-links">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
 
@@ -65,7 +65,7 @@
                 
             </div>
             <div class="About-col about-col-img">
-                <img src="images/about.jpg">
+                <img src="about.jpg">
             </div>
         </div>
     </section>
