--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section class="campus">
         <h1>Video Tour in DYP-ATU</h1>
         
-        <iframe src="D. Y. Patil Agriculture .mp4" frameborder="0" class="video"></iframe>
+        <iframe width="100%" height="600" src="https://www.youtube.com/embed/fSbCiJw_bbE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <!-----------------campus----------------->
     <section class="campus">
